--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,10 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --color-theme-blue: #0277c6;
+  --color-theme-blue-400: #0284d4;
+  --color-theme-blue-500: #0277c6;
+  --color-theme-blue-600: #0269b3;
 }
 
 @media (prefers-color-scheme: dark) {
